<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.navigationdrawer.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.navigationdrawer.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.example.navigationdrawer.ui.customers.CustomersFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.navigationdrawer.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.navigationdrawer.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>